--- a/FileSystemWatcher/App.config
+++ b/FileSystemWatcher/App.config
@@ -4,7 +4,7 @@
       <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
     </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
     <appSettings>
       <add key="KofaxRepositoryPath" value="C:\ACXMLAID\"/>
@@ -18,7 +18,7 @@
       <add key="XmlBatchAttrBatchClassName" value="HA-AV-HorsAgeasMail"/>
       <add key="XmlBatchAttrProcessed" value="false"/>
       <add key="XmlBatchAttrRelativeImageFilePath" value=""/>
-      <add key="XmlBatchAttrImportFileName" value=""/>
+      <add key="XmlDocumentAttrImportFileName" value="HorsAssurance_DocumentMail"/>
 
       <add key="DossiersEnErreurPrefix" value="ERR_"/>
     </appSettings>
